# spaceship-battle

./: .gitignore  README.md  pyproject.toml
src/: main.py
tests/: test_spaceship_battle.py
