[tool.poetry]
authors = ["Samuel Moore <samuel.moore@disneystreaming.com>"]
description = ""
name = "spaceship-battle"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylama = "^7.7.1"
black = "^20.8b1"
rope = "^0.18.0"
flake8 = "^3.9.0"
flake8-isort = "^4.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
